// Intended to test Python's import conflict resolution, since a file called
// `field_mask.proto` already appears in the well-known types.

syntax = "proto3";

package google.example.library.v1;

option java_multiple_files = true;
option java_outer_classname = "FieldMaskProto";
option java_package = "com.google.example.library.v1";

message FieldMask {

  enum Material {
    PAPIER_MACHE = 0;
    WOOD = 1;
    PORCELAIN = 2;
    SEQUINS = 3;
    CARDBOARD = 4;
  }

  repeated Material materials = 1;
}
